tests/errors/sem.overload.decl.or
main :: () -> void {
    x := 10;
    x := 10;
    x;
};
